src/objects/LDC_Account__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Arrangement_Code__c</fullName>
        <description>This field is added to store the Payment Arrangement Code  for PA</description>
        <label>Payment Arrangement Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pctg_Off_PK__c</fullName>
        <label>Pctg Off PK</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pctg_On_Peak__c</fullName>
        <label>Pctg On Peak</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Classification__c</fullName>
        <description>This is field is created to capture the Regulatory classification type</description>
        <label>Regulatory Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Street Lighting</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Class__c</fullName>
        <formula>CASE( LDC_Type__c ,
&apos;Commercial&apos;, &apos;C&apos;,
&apos;Flow Through&apos;, &apos;I&apos;,
&apos;Governmental&apos;, &apos;C&apos;,
&apos;Industrial&apos;, &apos;I&apos;,
&apos;Residential&apos;, &apos;R&apos;,
&apos;Other&apos;, &apos;R&apos;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDP_Number__c</fullName>
        <label>SDP Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Excempt__c</fullName>
        <formula>IF( ISPICKVAL(LDC_Type__c,&apos;Residential&apos;) || ISPICKVAL(LDC_Type__c,&apos;Governmental&apos;), &apos;1&apos;, 
IF(ISPICKVAL(LDC_Type__c,&apos;Industrial&apos;) || ISPICKVAL(LDC_Type__c,&apos;Commercial&apos;), &apos;0&apos;, 
&apos;&apos;))</formula>
        <inlineHelpText>Calculate  sales excemption based on LDC Type</inlineHelpText>
        <label>Sales Excempt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Welcome_Packet_by_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to check the Send welcome packet by Mail option and used in the iAve conversion</description>
        <label>Send Welcome Packet by Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <description>City Address for LDC Account</description>
        <label>Service City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_County__c</fullName>
        <description>County in LDC Account</description>
        <label>Service County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Postal_Code__c</fullName>
        <description>Postal Code of LDC Account</description>
        <label>Service Postal Code</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <description>Service State Address State for LDC Account</description>
        <label>Service State</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_1__c</fullName>
        <description>Address street 1 for LDC Account</description>
        <label>Service Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_2__c</fullName>
        <description>Address Street 2 for LDC Account</description>
        <label>Service Street 2</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement_Month__c</fullName>
        <description>This picklist field is created for handling the net metering.</description>
        <label>Settlement Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <formula>Account__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_DUNS__c</fullName>
        <formula>Account__r.Supplier__r.Supplier_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Group__c</fullName>
        <label>Supply Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Voltage__c</fullName>
        <label>Supply Voltage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Account_ID__c</fullName>
        <description>This field is created to store the Tax Account ID for the LDC Account</description>
        <inlineHelpText>Enter the Tax Account ID</inlineHelpText>
        <label>Tax Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_Obligation_Quantity__c</fullName>
        <label>Transmission Obligation Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Utility_Name_LDC_Number__c</fullName>
        <label>Unique Utility Name LDC Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_Rate_Class__c</fullName>
        <inlineHelpText>Populated by the Pricing Webscrape.  It matches the LDC Rate Class on the Meter level.  This field is sent to Lodestar the tag field &quot;Rate Code.&quot;</inlineHelpText>
        <label>Utility Rate Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_SubClass__c</fullName>
        <label>Utility Rate SubClass</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Unique_ID__c</fullName>
        <description>This field is created to store the Utility Unique ID and used in the iAve conversion</description>
        <label>Utility Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Zone__c</fullName>
        <label>Utility Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LDC Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Account_Status__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Service_Street_1__c</columns>
        <columns>Service_Street_2__c</columns>
        <columns>Service_State__c</columns>
        <columns>Service_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>American_Electric_Power</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Account_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>LDC_Account_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE,FINAL,NEVER_SERVED</value>
        </filters>
        <label>American Electric Power</label>
    </listViews>
    <listViews>
        <fullName>Duke_Energy_Ohio</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Duke Energy Ohio</value>
        </filters>
        <label>Duke Energy Ohio</label>
    </listViews>
    <listViews>
        <fullName>IL_Accounts</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Account_Status__c</columns>
        <columns>Opt_out__c</columns>
        <columns>LDC_Start_Date__c</columns>
        <columns>LDC_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Territory__c</field>
            <operation>equals</operation>
            <value>Ameren-IL,ComEd-IL</value>
        </filters>
        <label>IL Accounts</label>
    </listViews>
    <nameField>
        <label>LDC Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDC Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>